--- a/services/blog/package.json
+++ b/services/blog/package.json
@@ -24,10 +24,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "concurrently \"tsc --watch\" \"nodemon dist/server.js\""
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/server.js\"",
+    "lint": "eslint -c .eslintrc.cjs \"src/**/*.{ts,tsx,js}\"",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --check \"src/**/*.{ts,tsx,js,json,md}\"",
+    "format:fix": "prettier --write \"src/**/*.{ts,tsx,js,json,md}\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.3.3"
+  }
 }
