--- a/services/user/Dockerfile
+++ b/services/user/Dockerfile
@@ -1,27 +1,30 @@
-From node:22-alpine AS builder
+FROM node:22-alpine AS builder
 
 WORKDIR /app
 
-COPY package.json ./ 
+ENV NODE_ENV=development
 
-RUN npm install
+COPY package*.json ./
+
+RUN npm ci
 
 COPY tsconfig.json ./
-
 COPY src ./src
 
 RUN npm run build
 
-FROM node:22-alpine 
+FROM node:22-alpine AS runner
 
 WORKDIR /app
 
-COPY package.json ./ 
+ENV NODE_ENV=production
 
-RUN npm install --only=production
+COPY package*.json ./
+
+RUN npm ci --omit=dev
 
 COPY --from=builder /app/dist ./dist
 
+EXPOSE 5000
+
 CMD ["node", "dist/server.js"]
-
-
