--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,9 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.542.0",
     "moment": "^2.30.1",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1"
   },
